# to-doc-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  openapi.json  pyproject.toml
.claude/: .installed-files  settings.json
.claude/agents/: code-reviewer.md  database-reviewer.md  planner.md  python-build-resolver.md  python-performance-reviewer.md  security-reviewer.md  tdd-guide.md
.claude/commands/: db-migrate.md  dev-build.md  dev-coverage.md  dev-fix.md  dev-init.md  dev-plan.md  dev-review.md  dev-run.md  dev-test.md  dev-verify.md  dev.md
.claude/rules/: architecture.md  coding-style.md  error-handling.md  hooks.md  repository-patterns.md  router-patterns.md  schema-patterns.md  security.md  service-patterns.md  testing.md
.claude/skills/database-migrations/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/fastapi-security/: SKILL.md
.claude/skills/fastapi-tdd/: SKILL.md
.claude/skills/python-coding-standards/: SKILL.md
.claude/skills/sqlalchemy-patterns/: SKILL.md
.github/workflows/: openapi-check.yml
app/: main.py
app/agents/: base.py  llm.py  main.py  permit_agent.py  permit_document.py  permit_template.py  permits.py  state.py  tools.py
app/agents/deepagents/: README.md  VENDOR_INFO.txt
app/core/: config.py  logging.py
app/mcp/: .env.example  README.md  building.py  capacity.py  client.py  land_info_server.py  land_plan.py  land_use.py  settings.py  vworld.py
app/schemas/: agent.py  chat.py  permit_chat.py  permit_document.py
docs/: schema.sql
scripts/: export_openapi.py
tests/: test_chat.py  test_health.py  test_permit_chat.py  test_permit_document.py
(+73 files in other folders)
