[project]
name = "to-dac-backend"
version = "0.1.0"
description = "FastAPI backend with AI Agent and MCP integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "deepagents",
    "mcp[cli]>=1.12.0",
    "pandas>=2.2.0",
]

[tool.uv]
package = false

[tool.uv.sources]
deepagents = { path = "app/agents/deepagents/libs/deepagents", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
